{
    "name": "IAA_TrinityControls",
    "maps": [
        {
            "name": "PLAYER",
            "id": "459a8736-29ab-46e8-a44c-60ae18b6c7ff",
            "actions": [
                {
                    "name": "JumpGlide",
                    "type": "Button",
                    "id": "75cc0dcb-0286-4227-8733-3cbe869ae3dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Blink",
                    "type": "Button",
                    "id": "2e10a82b-6a04-4554-a19f-8f11107bfbf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Forcefield",
                    "type": "Button",
                    "id": "73f1aa5d-d649-4bda-9edf-09e3f0380b3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "736f8dde-db90-453a-8987-7a5c6c4d2e2d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "65cdafd3-89ff-4df7-8e5e-f4dc453e9837",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ElementalUtility",
                    "type": "Button",
                    "id": "0c474b98-2441-4b37-bc50-92be33366e99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ElementalPrimary",
                    "type": "Button",
                    "id": "288cf52d-1c8a-4ba7-b20c-d2ec0d3e6f55",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ElementalSecondary",
                    "type": "Button",
                    "id": "3219a59a-3518-43c5-b5e1-085029f812cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextElement",
                    "type": "Button",
                    "id": "874725ac-c465-46d7-8356-1d7172f13246",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PreviousElement",
                    "type": "Button",
                    "id": "ceb6ccbd-4d0d-4e33-a11d-100bfa5ee8d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1e6811e0-9490-4d9d-99e5-3be95bb7ac01",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "JumpGlide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00714b0f-03f1-4ef9-9f04-1b2bb8ec0a65",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Blink",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4ee1b63-4b30-4885-84a3-d0dcd855e4e0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Forcefield",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dfe29d3-036a-4671-b969-ebae7fafa5fd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "ebfb8800-f529-4037-af10-e852cf767507",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "38611380-d269-4dd5-adda-decea04a92f9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e7d9e0fc-6a97-4aaf-87c4-5b4777d3efcd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "79c8618a-3c5b-4958-835a-20df8409ead7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f466d888-5e6a-4eb8-a7fe-450aed577c07",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f461c6bb-6b80-47da-8506-9041384ee562",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37b6783c-71f8-49cc-8b35-8911dba014a4",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bf77eda-37b0-4df5-aeba-c9175867e757",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "ElementalUtility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e80b7e3-ead3-4626-8670-437b6e0972fd",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "ElementalPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f978636-c5f7-4416-9deb-2b2e6328c8ff",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "ElementalSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbf8193d-e530-42a0-81f2-72847c446374",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "NextElement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6eff5e66-e12c-4f37-905c-ac5dcbd2ddc4",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "GENERIC",
                    "action": "PreviousElement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GENERIC",
            "bindingGroup": "GENERIC",
            "devices": []
        }
    ]
}